--- a/docs/03.杂记/01.使用手册/01.Git常用命令.md
+++ b/docs/03.杂记/01.使用手册/01.Git常用命令.md
@@ -33,12 +33,12 @@ ssh -T git@github.com #以 github 为例
 1. `git add -A` 添加项目下所有文件
 1. `git commit -m "<commit_message>"` 提交到 git
 1. `git branch -M main` 重命名分支为main（github将主分支改为了main）
-1. `git remote add origin git@github.com:<github_name>/<repository——name>.git` 连接远程仓库
+1. `git remote add origin git@github.com:<github_name>/<repository_name>.git` 连接远程仓库
 1. `git push -u origin main` 推送至远程仓库（第一次推送）
 
 * 关联github已有项目
 1. 如果是别人的项目先 fork 到自己的仓库（optional）
-1. `git clone git@github.com:<github_name>/<repository——name>.git` 将项目 clone 至本地
+1. `git clone git@github.com:<github_name>/<repository_name>.git` 将项目 clone 至本地
 
 ## 三、常用命令
 ### 1. 基本命令
@@ -66,7 +66,7 @@ git branch -d <branch_name> #删除无用分支
 ### 1. 拉取远程分支代码
 
 ```bash
-git clone -b <branch_name> git@github.com:<github_name>/<repository——name>.git
+git clone -b <branch_name> git@github.com:<github_name>/<repository_name>.git
 ```
 
 ### 2. 切换至远程分支代码
