--- a/docs/02.算法/04.LeetCode/0752.LC752-打开转盘锁.md
+++ b/docs/02.算法/04.LeetCode/0752.LC752-打开转盘锁.md
@@ -12,7 +12,7 @@ permalink: /pages/8e87e0/
 
 ## 解题思路
 ### 方法一：单向BFS
-从起始点`"0000"`出发，有`"1000","9000","0100","0900","0010","0090","0001","0009"`8个可达点，以此类推，可以发现与BFS的搜索过程类似，最少旋转次数即为求解BFS层数，因此可以套用[单向BFS](/pages/c635ec/#单向BFS)的模板，同时注意以下几点：
+从起始点`"0000"`出发，有`"1000","9000","0100","0900","0010","0090","0001","0009"`8个可达点，以此类推，可以发现与BFS的搜索过程类似，最少旋转次数即为求解BFS层数，因此可以套用[单向BFS](/pages/c635ec/#单向bfs)的模板，同时注意以下几点：
 1. 结点为字符串，可使用`unordered_set`来判断是否已入过队
 2. 死亡数字和已入队元素都为不可达点，故可合并两个集合
 
