--- a/docs/02.算法/04.LeetCode/0773.LC773-滑动谜题.md
+++ b/docs/02.算法/04.LeetCode/0773.LC773-滑动谜题.md
@@ -16,7 +16,7 @@ permalink: /pages/6746e4/
 此题同理于：
 - [LC752-打开转盘锁](/pages/8e87e0/)
 
-可直接套用[单向BFS](/pages/c635ec/#单向BFS)的模板，同时注意以下几点：
+每个结点都有相应的几个可达点且求解最少次数，因此可直接套用[单向BFS](/pages/c635ec/#单向bfs)的模板，同时注意以下几点：
 1. 二维数组不好判重，此题二维数组仅为`0~5`6个数字组合而成，故可降维至一维数组，再转为`string`并使用`unordered_set`进行判断
 2. 此题只有6个位置，每个位置所对应的邻居可提前进行确定
 
