--- a/docs/02.算法/04.LeetCode/0815.LC815-公交路线.md
+++ b/docs/02.算法/04.LeetCode/0815.LC815-公交路线.md
@@ -14,10 +14,8 @@ permalink: /pages/3e65f3/
 ### 方法一：单向BFS
 此题同理于：
 - [LC752-打开转盘锁](/pages/8e87e0/)
-- [LC773-滑动谜题](/pages/6746e4/)
-- [LC909-蛇梯棋](/pages/c2ef6a/)
 
-可直接套用[单向BFS](/pages/c635ec/#单向BFS)的模板，同时注意以下几点：
+每个结点都有相应的几个可达点且求解最少换乘次数，因此可直接套用[单向BFS](/pages/c635ec/#单向bfs)的模板，同时注意以下几点：
 1. 为了快速寻找当前车站所经过的所有公交路线，可以使用`unordered_map`建立车站与经过的所有公交路线的映射
 2. 可以得知一条已访问过的公交路线上的车站肯定也访问过，因此可使用一个bool型数组visited来记录某个公交路线是否已被访问
 3. 车站的数值范围较多，故使用`unordered_set`来记录车站是否已入过队
