--- a/docs/02.算法/04.LeetCode/0909.LC909-蛇梯棋.md
+++ b/docs/02.算法/04.LeetCode/0909.LC909-蛇梯棋.md
@@ -14,9 +14,8 @@ permalink: /pages/c2ef6a/
 ### 方法一：单向BFS
 此题同理于：
 - [LC752-打开转盘锁](/pages/8e87e0/)
-- [LC773-滑动谜题](/pages/6746e4/)
 
-可直接套用[单向BFS](/pages/c635ec/#单向BFS)的模板，同时注意以下几点：
+每个结点都有相应的几个可达点且求解最少移动次数，因此可直接套用[单向BFS](/pages/c635ec/#单向bfs)的模板，同时注意以下几点：
 1. 可将二维数组降维至一维数组，那么当`board[x] != -1`时，直接传送到的位置即为`board[x]`，可简化过程
 2. 转化为一维数组后，位置范围即为[1,n*n]，因此可直接使用bool型数组inq来记录每个位置是否已入过队
 3. 注意[x+1,x+6]是否越界
