--- a/docs/02.算法/04.LeetCode/00.合集/01.Hot 100.md
+++ b/docs/02.算法/04.LeetCode/00.合集/01.Hot 100.md
@@ -20,7 +20,7 @@ LeetCode 热题 HOT 100，链接：[https://leetcode-cn.com/problem-list/2cktkvj
  15. 三数之和 | 🟡 
  [17. 电话号码的字母组合](/pages/cf5b1c/) | 🟡
  19. 删除链表的倒数第 N 个结点 | 🟡
- 20. 有效的括号 | 🟢
+ [20. 有效的括号](/pages/27ad33/) | 🟢
  21. 合并两个有序链表 | 🟢
  22. 括号生成 | 🟡
  23. 合并K个升序链表 | 🔴
@@ -34,7 +34,7 @@ LeetCode 热题 HOT 100，链接：[https://leetcode-cn.com/problem-list/2cktkvj
  48. 旋转图像 | 🟡
  49. 字母异位词分组 | 🟡
  53. 最大子序和 | 🟢
- 55. 跳跃游戏 | 🟡
+ [55. 跳跃游戏](/pages/e1e444/) | 🟡
  56. 合并区间 | 🟡
  62. 不同路径 | 🟡
  64. 最小路径和 | 🟡
