--- a/docs/02.算法/01.数据结构/02.栈与队列.md
+++ b/docs/02.算法/01.数据结构/02.栈与队列.md
@@ -5,6 +5,49 @@ permalink: /pages/fd9bd8/
 ---
 
 ## 栈
+> 栈（stack）是只允许在一端进行插入或删除操作的线性表，是一种**后进先出**的数据结构。
 
+![](https://gitee.com/einsier/pics-bed/raw/master/pics/‎2021‎07‎0‎5‎215358.jpg)
+下面使用数组`st[]`来实现栈的基本操作，其中`TOP`表示栈顶元素的下标：
+```c
+// 清空
+void clear() {
+    TOP = -1;
+}
+// 获取栈内元素个数
+int size() {
+    return TOP + 1;
+}
+// 判空
+bool empty() {
+    return TOP == -1;
+}
+// 进栈
+void push(int x) {
+    st[++TOP] = x;
+}
+// 出栈
+void pop() {
+    TOP--;
+}
+// 取栈顶元素
+int top() {
+    return st[TOP];
+}
+```
+
+### 栈的应用
+栈有以下几种常见应用：
+1. 进制转换
+2. 括号匹配
+3. 表达式求值
+4. 迷宫求解等经典问题
+5. 递归的实现
+
+### 使用
+一般来说，可以直接通过标准模板库中[stack](/pages/2ac963/#stack)来直接使用栈的功能。
+
+### 相关问题
+[栈专题](/pages/210fc6/)
 
 ## 队列
