--- a/docs/02.算法/02.经典算法/01.二分查找.md
+++ b/docs/02.算法/02.经典算法/01.二分查找.md
@@ -7,7 +7,7 @@ permalink: /pages/34f617/
 ## 基本二分
 二分查找是基于**有序序列**的查找算法，其高效之处在于每一步可以去除当前查找区间中的一半元素，因此该算法的时间复杂度为O(logn)。
 
-### 寻找一个数（严格有序）
+### 【例】寻找一个数（严格有序）
 如何使用二分查找法在一个严格有序序列中找出给定的`target`的位置，以严格递增序列 A = {1, 3, 4, 6, 10, 12, 13} 中查找数字10为例：
 1. 令 `left = 1, right = 7`，表示当前查询的下标范围。
 1. `[left,right] = [1,7]`，此时下标中点 mid = (left + right) / 2 = 4。由于 A[4] = 6 < 10，说明需要在`[mid+1,right]`范围内继续查找，因此令`left = mid + 1`。
@@ -39,7 +39,7 @@ int binarySearch(int A[], int n, int target) {
 3. 若为严格递减序列，修改判断条件即可
 :::
 
-### 寻找第一个大于目标值的位置（含重复值）
+### 【例】寻找第一个大于目标值的位置（含重复值）
 如果有序序列中含有重复的元素，如何在该序列中找出第一个大于`target`的位置：
 - 若`A[mid] > target`，说明第一个大于`target`的元素位置一定在mid或mid左侧，需要在`[left,mid]`范围内继续查找，因此令`right = mid`
 - 若`A[mid] <= target`, 说明第一个大于`target`的元素位置一定在右侧，需要在`[mid + 1,right]`范围内继续查找，因此令`left = mid + 1`
