--- a/docs/02.算法/02.经典算法/02.回溯算法.md
+++ b/docs/02.算法/02.经典算法/02.回溯算法.md
@@ -31,7 +31,7 @@ void backtracking(已选路径, 可选列表)
     }
 }
 ```
-### 返回某数组（无重复元素）的所有子集
+### 【例】返回某数组（无重复元素）的所有子集
 以下从一个例子来理解此递归模板的使用：
 >如给定一个不包含重复元素的数组`nums = [1,2,3]`，应返回其所有子集为`[[],[1],[1,2],[1,2,3],[1,3],[2,3],[3]]`
 
