--- a/docs/05.收藏夹/03.书影清单.md
+++ b/docs/05.收藏夹/03.书影清单.md
@@ -11,7 +11,7 @@ permalink: /pages/a6775b/
 
 ## 书籍
 ### 2021
-- [《杀死一只知更鸟》哈珀·李](https://book.douban.com/subject/6781808/) 2021-06
+- [《杀死一只知更鸟》哈珀·李](https://book.douban.com/subject/6781808/) 2021-06 ~ 2021-07
 - [《爱你就像爱生命》王小波](https://book.douban.com/subject/3071717/) 2021-04 ~ 2021-06
 
 ## 电影
