--- a/docs/02.算法/04.LeetCode/00.合集/04.哈希表专题.md
+++ b/docs/02.算法/04.LeetCode/00.合集/04.哈希表专题.md
@@ -10,5 +10,7 @@ LeetCode哈希表相关问题题解合集
 
 题名 | 难度 
 :---------:|:----------:
+ [LC1-两数之和](/pages/aa2964/) | 🟢
  [LC149-直线上最多的点数](/pages/ea76cb/) | 🔴
  [LC726-原子的数量](/pages/56ccb8/) | 🔴
+ [LC1711-大餐计数](/pages/ffbd7f/) | 🟡
