--- a/docs/02.算法/04.LeetCode/0752.LC752-打开转盘锁.md
+++ b/docs/02.算法/04.LeetCode/0752.LC752-打开转盘锁.md
@@ -8,7 +8,7 @@ permalink: /pages/8e87e0/
 
 - 链接：[https://leetcode-cn.com/problems/open-the-lock/](https://leetcode-cn.com/problems/open-the-lock/)
 - 难度：🟡
-- 标签：[BFS](/pages/c635ec/)、[哈希表](/pages/dee52c/)
+- 标签：[BFS](/pages/c635ec/)
 
 ## 解题思路
 ### 方法一：单向BFS
