--- a/docs/02.算法/04.LeetCode/0773.LC773-滑动谜题.md
+++ b/docs/02.算法/04.LeetCode/0773.LC773-滑动谜题.md
@@ -9,7 +9,7 @@ permalink: /pages/6746e4/
 
 - 链接：[https://leetcode-cn.com/problems/sliding-puzzle/](https://leetcode-cn.com/problems/sliding-puzzle/)
 - 难度：🔴
-- 标签：[BFS](/pages/c635ec/)、[哈希表](/pages/dee52c/)
+- 标签：[BFS](/pages/c635ec/)
 
 ## 解题思路
 ### 方法一：单向BFS
