--- a/docs/05.收藏夹/03.书影清单.md
+++ b/docs/05.收藏夹/03.书影清单.md
@@ -11,6 +11,7 @@ permalink: /pages/a6775b/
 
 ## 书籍
 ### 2021
+- [《激荡三十年》吴晓波](https://book.douban.com/subject/3151575/) 2021-07 ~
 - [《杀死一只知更鸟》哈珀·李](https://book.douban.com/subject/6781808/) 2021-06 ~ 2021-07
 - [《爱你就像爱生命》王小波](https://book.douban.com/subject/3071717/) 2021-04 ~ 2021-06
 
