--- a/docs/02.算法/04.LeetCode/00.合集/01.Hot 100.md
+++ b/docs/02.算法/04.LeetCode/00.合集/01.Hot 100.md
@@ -10,7 +10,7 @@ LeetCode 热题 HOT 100，链接：[https://leetcode-cn.com/problem-list/2cktkvj
 
 题名 | 难度 
 :---------:|:----------:
- 1. 两数之和 | 🟢 
+ [1. 两数之和](/pages/aa2964/) | 🟢 
  2. 两数相加 | 🟡 
  3. 无重复字符的最长子串 | 🟡
  4. 寻找两个正序数组的中位数 | 🔴 
