--- a/docs/02.算法/04.LeetCode/0815.LC815-公交路线.md
+++ b/docs/02.算法/04.LeetCode/0815.LC815-公交路线.md
@@ -8,7 +8,7 @@ permalink: /pages/3e65f3/
 
 - 链接：[https://leetcode-cn.com/problems/bus-routes/](https://leetcode-cn.com/problems/bus-routes/)
 - 难度：🔴
-- 标签：[BFS](/pages/c635ec/)、[哈希表](/pages/dee52c/)
+- 标签：[BFS](/pages/c635ec/)
 
 ## 解题思路
 ### 方法一：单向BFS
