--- a/docs/02.算法/02.经典算法/02.回溯算法.md
+++ b/docs/02.算法/02.经典算法/02.回溯算法.md
@@ -4,7 +4,7 @@ date: 2021-06-19 16:34:17
 permalink: /pages/bca1c0/
 ---
 
-## 回溯算法
+## 基本概念
 回溯算法（Back Tracking）实际上是一个类似枚举的搜索尝试过程，主要是在搜索尝试过程中寻找问题的解，当发现已不满足求解条件时，就“回溯”返回，尝试别的路径。通常适用于求解排列组合、所有路径等问题。
 
 一般解题步骤：
