--- a/docs/02.算法/02.经典算法/03.贪心算法.md
+++ b/docs/02.算法/02.经典算法/03.贪心算法.md
@@ -4,7 +4,7 @@ date: 2021-07-02 15:29:04
 permalink: /pages/28bdf7/
 ---
 
-## 贪心算法
+## 简单贪心
 ### 基本概念
 贪心算法（Greedy Algorithm）是求解一类最优化问题的方法，它总是考虑在当前状态下**局部最优**的策略，来使全局的结果达到最优。贪心算法没有固定的算法框架，算法设计的关键是贪心策略的选择。必须注意的是，贪心算法不是对所有问题都能得到全局最优解，选择的贪心策略必须具备无后效性。
 
