--- a/docs/02.算法/02.经典算法/01.二分查找.md
+++ b/docs/02.算法/02.经典算法/01.二分查找.md
@@ -39,8 +39,8 @@ int binarySearch(int A[], int n, int target) {
 3. 若为严格递减序列，修改判断条件即可
 :::
 
-### 【例】寻找第一个大于目标值的位置（含重复值）
-如果有序序列中含有重复的元素，如何在该序列中找出第一个大于`target`的位置：
+### 【例】寻找第一个大于目标值的位置（最小值）
+如何在有序序列中找出第一个大于`target`的位置：
 - 若`A[mid] > target`，说明第一个大于`target`的元素位置一定在mid或mid左侧，需要在`[left,mid]`范围内继续查找，因此令`right = mid`
 - 若`A[mid] <= target`, 说明第一个大于`target`的元素位置一定在右侧，需要在`[mid + 1,right]`范围内继续查找，因此令`left = mid + 1`
 
@@ -66,6 +66,33 @@ upper_bound函数与binarySearch函数相比有以下不同点：
 2. 循环条件由`left <= right`变为`left < right`，这是由于前者当区间收缩为`[left,right]`时仍需进行判断，即可能存在元素`target`并不在序列中，而后者当区间收缩至`[left,right]`时无需再进行判断，此时夹出的唯一位置即为答案
 :::
 
+### 【例】寻找小于目标值的最大值位置
+如何在有序序列中找出小于`target`的最大值位置：
+- 若`A[mid] >= target`，说明所查找的元素位置一定在mid左侧，需要在`[left,mid - 1]`范围内继续查找，因此令`right = mid - 1`
+- 若`A[mid] < target`, 说明所查找的元素位置一定在mid或mid右侧，需要在`[mid,right]`范围内继续查找，因此令`left = mid`
+
+代码实现：
+```cpp {2,5}
+int find_max(int A[], int n, int target) {
+    int left = -1, right = n - 1;  //查询区间为[-1,n-1]
+    int mid;
+    while(left < right) {
+        mid = (left + right + 1) / 2;  //取中点
+        if(A[mid] >= target) {
+            right = mid + 1;
+        } else {
+            left = mid;
+        }
+    }
+    return left;  //此时区间为[left,right]，夹出唯一位置
+}
+```
+::: tip 💡
+查找符合条件的最大值函数有以下特点：
+1. 查询区间变为`[-1,n-1]`，这是由于要查询的`target`可能小于序列中所有元素，那么-1即为所求的位置
+2. mid表达式变为`mid = (left + right + 1) / 2`，是为了避免`[left,right]`只剩下两个元素时进入死循环
+:::
+
 ### 小结
 针对基本二分查找的的问题，需要根据实际情况来考虑以下条件：
 1. 初始区间（应覆盖所有可能返回的结果）
@@ -75,7 +102,7 @@ upper_bound函数与binarySearch函数相比有以下不同点：
 2. 循环条件
     - 若查询元素需要判断是否存在于查找区间内，应选择`left <= right`，此时区间收缩为空时才退出循环
     - 若查询元素一定存在于查找区间内，应选择`left < right`夹出唯一位置
-3. 收缩区间时mid的归属情况
+3. 考虑mid的表达式是否需要+1和收缩区间时mid的归属情况
 
 ## 拓展二分
 >待更新
