--- a/docs/02.算法/04.LeetCode/00.合集/02.二分查找专题.md
+++ b/docs/02.算法/04.LeetCode/00.合集/02.二分查找专题.md
@@ -11,4 +11,6 @@ LeetCode二分查找相关问题题解合集
 题名 | 难度 
 :---------:|:----------:
  [LC33-搜索旋转排序数组](/pages/eaba82/) | 🟡 
+ [LC274-H 指数](/pages/c1fc01/) | 🟡
  [LC374-猜数字大小](/pages/31b5fa/) | 🟢
+ [LC981-基于时间的键值存储](/pages/fe0307/) | 🟡 
