--- a/docs/02.算法/04.LeetCode/00.合集/02.二分查找专题.md
+++ b/docs/02.算法/04.LeetCode/00.合集/02.二分查找专题.md
@@ -11,6 +11,7 @@ LeetCode二分查找相关问题题解合集
 题名 | 难度 
 :---------:|:----------:
  [LC33-搜索旋转排序数组](/pages/eaba82/) | 🟡 
+ [LC34-在排序数组中查找元素的第一个和最后一个位置](/pages/b61c09/) | 🟡 
  [LC274-H 指数](/pages/c1fc01/) | 🟡
  [LC275-H 指数 II](/pages/f19195/) | 🟡
  [LC374-猜数字大小](/pages/31b5fa/) | 🟢
