--- a/docs/05.收藏夹/03.书影清单.md
+++ b/docs/05.收藏夹/03.书影清单.md
@@ -17,5 +17,6 @@ permalink: /pages/a6775b/
 
 ## 电影
 ### 2021
+- [白蛇2：青蛇劫起](https://movie.douban.com/subject/30435124/) 2021-08-01
 - [刺杀小说家](https://movie.douban.com/subject/26826330/) 2021-02-26
 - [新神榜：哪吒重生](https://movie.douban.com/subject/34779692/) 2021-02-07
