--- a/docs/05.收藏夹/03.书影清单.md
+++ b/docs/05.收藏夹/03.书影清单.md
@@ -11,12 +11,15 @@ permalink: /pages/a6775b/
 
 ## 书籍
 ### 2021
-- [《激荡三十年》吴晓波](https://book.douban.com/subject/3151575/) 2021-07 ~
+- [《三体》刘慈欣](https://book.douban.com/subject/2567698/) 2021-09 ~ 
+- [《激荡三十年》吴晓波](https://book.douban.com/subject/3151575/) 2021-07 ~ 2021-09
 - [《杀死一只知更鸟》哈珀·李](https://book.douban.com/subject/6781808/) 2021-06 ~ 2021-07
 - [《爱你就像爱生命》王小波](https://book.douban.com/subject/3071717/) 2021-04 ~ 2021-06
 
 ## 电影
 ### 2021
+- [美丽心灵](https://movie.douban.com/subject/1306029/) 2021-09-19
+- [寻梦环游记](https://movie.douban.com/subject/20495023/) 2021-09-06
 - [白蛇2：青蛇劫起](https://movie.douban.com/subject/30435124/) 2021-08-01
 - [刺杀小说家](https://movie.douban.com/subject/26826330/) 2021-02-26
 - [新神榜：哪吒重生](https://movie.douban.com/subject/34779692/) 2021-02-07
