--- a/docs/02.算法/01.数据结构/04.搜索-DFS.md
+++ b/docs/02.算法/01.数据结构/04.搜索-DFS.md
@@ -8,3 +8,44 @@ permalink: /pages/ae8ff2/
 深度优先搜索（Depth First Search，DFS）和广度优先搜索（Breadth First Search，BFS）是图论中两种重要的搜索算法。其中，DFS总是以**深度**为前进的关键词，沿着一条路走到底，直到无路可走才回退到上一个结点选择另一条路，特点是“不撞南墙不回头”。也就是说，**DFS是一种枚举所有完整路径以遍历所有情况的搜索方法**。
 
 DFS的主要思想类似于树的前序遍历。
+
+## 递归模板
+DFS实际上为树的前序遍历的拓展，使用递归来实现更加简洁清晰：
+```cpp
+void DFS(int v) {
+    visit(v);  // 访问顶点v
+	visited[v] = true;  // 设已访问标记
+ 
+	for(顶点v的所有邻接顶点u) {
+		if(!visited[u]) {  // 未访问的邻接顶点
+            DFS(u);
+        }
+	}
+}
+```
+
+## 非递归模板（栈）
+DFS的非递归模板需要借助一个栈来暂存下一步可能访问的顶点，具体实现如下：
+
+```cpp
+void DFS_Stack(int v) {
+    stack<int> s;
+    s.push(v);
+	visited[v] = true;  // 设已入栈标记
+    while(!s.empty()) {
+        k = s.top();
+        visit(k);  // 访问栈顶的顶点k
+        s.pop();  // 栈顶元素出栈
+        for(顶点k的所有邻接顶点u) {
+            if(!visited[u]) {  // 未进栈的邻接顶点
+                s.push(u);
+                visited[u] = true;
+            }
+        }
+    }
+}
+```
+注意：由于使用了栈，使得遍历的方式从右端到左端进行，不同于常规遍历顺序，但仍为深度优先遍历。
+
+## 相关问题
+[DFS专题](/pages/ff2297/)
