--- a/docs/02.算法/04.LeetCode/00.合集/01.Hot 100.md
+++ b/docs/02.算法/04.LeetCode/00.合集/01.Hot 100.md
@@ -97,7 +97,7 @@ LeetCode 热题 HOT 100，链接：[https://leetcode-cn.com/problem-list/2cktkvj
  399. 除法求值 | 🟡
  406. 根据身高重建队列 | 🟡
  416. 分割等和子集 | 🟡
- 437. 路径总和 III | 🟡
+ [437. 路径总和 III](/pages/67f77f/) | 🟡
  438. 找到字符串中所有字母异位词 | 🟡
  448. 找到所有数组中消失的数字 | 🟢
  461. 汉明距离 | 🟢
