--- a/docs/02.算法/04.LeetCode/00.合集/08.前缀和专题.md
+++ b/docs/02.算法/04.LeetCode/00.合集/08.前缀和专题.md
@@ -13,4 +13,5 @@ LeetCode前缀和相关问题题解合集
  [LC53-最大子序和](/pages/631cd3/) | 🟢
  [LC303-区域和检索 - 数组不可变](/pages/77beed/) | 🟢
  [LC304-二维区域和检索 - 矩阵不可变](/pages/668415/) | 🟡
+ [LC437-路径总和 III](/pages/67f77f/) | 🟡
  [LC930-和相同的二元子数组](/pages/8b9de1/) | 🟡
