--- a/docs/02.算法/04.LeetCode/00.合集/01.Hot 100.md
+++ b/docs/02.算法/04.LeetCode/00.合集/01.Hot 100.md
@@ -68,7 +68,7 @@ LeetCode 热题 HOT 100，链接：[https://leetcode-cn.com/problem-list/2cktkvj
  160. 相交链表 | 🟢
  169. 多数元素 | 🟢
  198. 打家劫舍 | 🟡
- 200. 岛屿数量 | 🟡
+ [200. 岛屿数量](/pages/96e6b3/) | 🟡
  206. 反转链表 | 🟢
  207. 课程表 | 🟡
  208. 实现 Trie (前缀树) | 🟡
