--- a/docs/02.算法/04.LeetCode/00.合集/10.DFS专题.md
+++ b/docs/02.算法/04.LeetCode/00.合集/10.DFS专题.md
@@ -13,4 +13,5 @@ LeetCode深度优先搜索相关问题题解合集
 :---------:|:----------:
  [LC112-路径总和](/pages/0e1e69/) | 🟢
  [LC113-路径总和 II](/pages/5db523/) | 🟡
+ [LC200-岛屿数量](/pages/96e6b3/) | 🟡
  [LC437-路径总和 III](/pages/67f77f/) | 🟡
