--- a/docs/03.杂记/01.使用手册/01.Git常用命令.md
+++ b/docs/03.杂记/01.使用手册/01.Git常用命令.md
@@ -62,7 +62,7 @@ git merge <branch_name> #切换回 master 后合并分支
 git branch -d <branch_name> #删除无用分支
 ```
 
-## 四、其他
+## 四、其他操作
 ### 1. 拉取远程分支代码
 
 ```bash
@@ -107,4 +107,11 @@ git pull --rebase #rebase 中断
 git add
 git rebase --continue
 git push
+```
+
+## 五、问题解决
+### 1. error: RPC failed
+```bash
+$ git config --global http.postBuffer 524288000
+$ git config --global http.sslVerify false
 ```
