--- a/docs/02.算法/02.经典算法/02.回溯算法.md
+++ b/docs/02.算法/02.经典算法/02.回溯算法.md
@@ -25,7 +25,7 @@ void backtracking(已选路径, 可选列表)
     for(可选列表) {  // 根据情况可在此处进行剪枝优化
         if(节点符合要求) {  // 可选，在for循环不方便剪枝的情况下使用
             选择节点;
-            backTracking(新的已选路径, 可选列表);
+            backtracking(新的已选路径, 可选列表);
             撤销选择;
         }
     }
