--- a/docs/02.算法/04.LeetCode/0003.LC3-无重复字符的最长子串.md
+++ b/docs/02.算法/04.LeetCode/0003.LC3-无重复字符的最长子串.md
@@ -22,8 +22,7 @@ permalink: /pages/19e899/
 class Solution {
 public:
     int lengthOfLongestSubstring(string s) {
-        int res = 0;
-        int left = 0, right = 0;  // 窗口左右指针
+        int res = 0, int left = 0, right = 0;  // 窗口左右指针
         unordered_set<int> st;
         while(right < s.size()) {
             while(st.find(s[right]) != st.end()) {  // 重复则缩小窗口
@@ -37,6 +36,27 @@ public:
         return res;
     }
 };
+```
+</code-block>
+
+<code-block title="Java">
+```java
+class Solution {
+    public int lengthOfLongestSubstring(String s) {
+        int res = 0, left = 0, right = 0;  // 窗口左右指针
+        HashSet<Character> st = new HashSet<Character>();
+        while(right < s.length()) {
+            while(st.contains(s.charAt(right))) {  // 重复则缩小窗口
+                st.remove(s.charAt(left));
+                ++left;
+            }
+            st.add(s.charAt(right));  // 退出while后必然不重复
+            res = Math.max(res, right - left + 1);
+            ++right;
+        }
+        return res;
+    }
+}
 ```
 </code-block>
 </code-group>
