--- a/docs/02.算法/04.LeetCode/0033.LC33-搜索旋转排序数组.md
+++ b/docs/02.算法/04.LeetCode/0033.LC33-搜索旋转排序数组.md
@@ -33,9 +33,9 @@ permalink: /pages/eaba82/
 class Solution {
 public:
     int search(vector<int>& nums, int target) {
-        int left = 0, right = nums.size() - 1;
+        int left = 0, right = nums.size() - 1, mid;
         while(left <= right) {
-            int mid = (left + right) / 2;
+            mid = (left + right) / 2;
             if(nums[mid] == target) return mid;
             if(nums[left] <= nums[mid]) {  //左半侧有序
                 if(nums[left] <= target && target < nums[mid]) {  //若有可能在左侧，舍弃右侧
@@ -54,6 +54,34 @@ public:
         return -1;
     }
 };
+```
+</code-block>
+
+<code-block title="Java">
+```java {7}
+class Solution {
+    public int search(int[] nums, int target) {
+        int left = 0, right = nums.length - 1, mid;  // 确定左右区间
+        while(left <= right) {  // 可能不存在，夹至空值时退出
+            mid = (left + right) / 2;
+            if(nums[mid] == target) return mid;  // 找到目标元素
+            if(nums[left] <= nums[mid]) {  //左半侧有序
+                if(nums[left] <= target && target < nums[mid]) {  //若有可能在左侧
+                    right = mid - 1;  // 舍弃右侧
+                } else {  //若不可能在左侧
+                    left = mid + 1;  // 舍弃左侧
+                }
+            } else {  //右半侧有序，同上
+                if(nums[mid] < target && target <= nums[right]) {
+                    left = mid + 1;
+                } else {
+                    right = mid - 1;
+                }
+            }
+        }
+        return -1;
+    }
+}
 ```
 </code-block>
 </code-group>
