--- a/docs/02.算法/04.LeetCode/0046.LC46-全排列.md
+++ b/docs/02.算法/04.LeetCode/0046.LC46-全排列.md
@@ -25,13 +25,14 @@ permalink: /pages/c2cdc2/
 ```cpp
 class Solution {
 public:
+    vector<vector<int>> res;
+    vector<bool> visited;
     vector<vector<int>> permute(vector<int>& nums) {
-        vector<vector<int>> res;
-        vector<bool> visited = vector<bool>(nums.size(), false);
-        backTracking({}, nums, visited, res);
+        visited.assign(nums.size(), false);  // 初始化标记数组
+        backtracking({}, nums);
         return res;
     }
-    void backTracking(vector<int> path, vector<int>& nums, vector<bool>& visited, vector<vector<int>>& res) {
+    void backtracking(vector<int> path, vector<int>& nums) {
         if(path.size() == nums.size()) {  // 此路径已包含所有元素
             res.push_back(path);
             return;
@@ -40,13 +41,41 @@ public:
             if(!visited[i]) {  // 元素还未被选择
                 path.push_back(nums[i]);
                 visited[i] = 1;
-                backTracking(path, nums, visited, res);
+                backtracking(path, nums);
                 visited[i] = 0;
                 path.pop_back();
             }
         }
     }
 };
+```
+</code-block>
+
+<code-block title="Java">
+```java
+class Solution {
+    List<List<Integer>> res = new ArrayList<List<Integer>>();
+    Set<Integer> visited = new HashSet<Integer>();  // 存储已访问元素
+    public List<List<Integer>> permute(int[] nums) {
+        backtracking(new ArrayList<Integer>(), nums);
+        return res;
+    }
+    private void backtracking(List<Integer> path, int[] nums) {
+        if(path.size() == nums.length) {  // 此路径已包含所有元素
+            res.add(new ArrayList<Integer>(path));
+            return;
+        }
+        for(int num : nums) {
+            if(!visited.contains(num)) {  // 元素还未被选择
+                path.add(num);
+                visited.add(num);
+                backtracking(path, nums);
+                visited.remove(num);
+                path.remove(path.size() - 1);
+            }
+        }
+    }
+}
 ```
 </code-block>
 </code-group>
