--- a/docs/02.算法/04.LeetCode/0053.LC53-最大子序和.md
+++ b/docs/02.算法/04.LeetCode/0053.LC53-最大子序和.md
@@ -34,4 +34,20 @@ public:
 };
 ```
 </code-block>
+
+<code-block title="Java">
+```java
+class Solution {
+    public int maxSubArray(int[] nums) {
+        int curSum = 0, minPreSum = 0, res = Integer.MIN_VALUE;  // minPreSum维护最小的前缀和
+        for(int num : nums) {
+            curSum += num;
+            res = Math.max(res, curSum - minPreSum);  // 更新最大子序和
+            minPreSum = Math.min(minPreSum, curSum);  // 更新最小前缀和
+        }
+        return res;
+    }
+}
+```
+</code-block>
 </code-group>
