--- a/docs/02.算法/04.LeetCode/0055.LC55-跳跃游戏.md
+++ b/docs/02.算法/04.LeetCode/0055.LC55-跳跃游戏.md
@@ -36,4 +36,21 @@ public:
 };
 ```
 </code-block>
+
+<code-block title="Java">
+```java
+class Solution {
+class Solution {
+    public boolean canJump(int[] nums) {
+        if(nums.length == 1) return true;
+        int maxReach = nums[0];
+        for(int i = 1; i < nums.length; ++i) {
+            if(i > maxReach) return false;  // 当前位置不可达
+            maxReach = Math.max(maxReach, i + nums[i]);  // 更新最远位置
+        }
+        return maxReach >= nums.length - 1;
+    }
+}
+```
+</code-block>
 </code-group>
