--- a/docs/02.算法/04.LeetCode/0113.LC113-路径总和 II.md
+++ b/docs/02.算法/04.LeetCode/0113.LC113-路径总和 II.md
@@ -38,20 +38,61 @@ permalink: /pages/5db523/
 class Solution {
 public:
     vector<vector<int>> res;
+    vector<int> path;
     vector<vector<int>> pathSum(TreeNode* root, int targetSum) {
-        dfs(root, targetSum, {});
+        dfs(root, targetSum);
         return res;
     }
-    void dfs(TreeNode* root, int targetSum, vector<int> path) {
+    void dfs(TreeNode* root, int targetSum) {
         if(root) {
             path.push_back(root->val);  // 在路径中添加节点
             if(!root->left && !root->right && root->val == targetSum) res.push_back(path);  // 添加满足要求的路径
-            dfs(root->left, targetSum - root->val, path);
-            dfs(root->right, targetSum - root->val, path);
+            dfs(root->left, targetSum - root->val);
+            dfs(root->right, targetSum - root->val);
             path.pop_back();  // 路径回退
         }
     }
 };
+```
+</code-block>
+
+<code-block title="Java">
+```java
+/**
+ * Definition for a binary tree node.
+ * public class TreeNode {
+ *     int val;
+ *     TreeNode left;
+ *     TreeNode right;
+ *     TreeNode() {}
+ *     TreeNode(int val) { this.val = val; }
+ *     TreeNode(int val, TreeNode left, TreeNode right) {
+ *         this.val = val;
+ *         this.left = left;
+ *         this.right = right;
+ *     }
+ * }
+ */
+class Solution {
+    private List<List<Integer>> res = new ArrayList<>();
+    private List<Integer> path = new ArrayList<>();
+
+    public List<List<Integer>> pathSum(TreeNode root, int targetSum) {
+        dfs(root, targetSum);
+        return res;
+    }
+    private void dfs(TreeNode root, int targetSum) {
+        if(root != null) {
+            path.add(root.val);  // 在路径中添加节点
+            if(root.left == null && root.right == null && root.val == targetSum) {
+                res.add(new ArrayList<>(path));  // 添加满足要求的路径
+            }
+            dfs(root.left, targetSum - root.val);
+            dfs(root.right, targetSum - root.val);
+            path.remove(path.size() - 1);  // 路径回退
+        }
+    }
+}
 ```
 </code-block>
 </code-group>
