--- a/docs/02.算法/04.LeetCode/0437.LC437-路径总和 III.md
+++ b/docs/02.算法/04.LeetCode/0437.LC437-路径总和 III.md
@@ -57,4 +57,44 @@ public:
 };
 ```
 </code-block>
+
+<code-block title="Java">
+```java
+/**
+ * Definition for a binary tree node.
+ * public class TreeNode {
+ *     int val;
+ *     TreeNode left;
+ *     TreeNode right;
+ *     TreeNode() {}
+ *     TreeNode(int val) { this.val = val; }
+ *     TreeNode(int val, TreeNode left, TreeNode right) {
+ *         this.val = val;
+ *         this.left = left;
+ *         this.right = right;
+ *     }
+ * }
+ */
+class Solution {
+    private Map<Integer, Integer> map = new HashMap<>();
+    private int res = 0;
+    public int pathSum(TreeNode root, int targetSum) {
+        map.put(0, 1);  // 存入0
+        dfs(root, 0, targetSum);
+        return res;
+    }
+
+    private void dfs(TreeNode root, int curSum, int targetSum) {
+        if(root != null) {
+            curSum += root.val;
+            if(map.containsKey(curSum - targetSum)) res += map.get(curSum - targetSum);  // 当前路径中存在符合要求的路径，加上路径数量
+            map.put(curSum, map.getOrDefault(curSum, 0) + 1);  // 存储当前路径前缀和
+            dfs(root.left, curSum, targetSum);
+            dfs(root.right, curSum, targetSum);
+            map.put(curSum, map.get(curSum) - 1);  // 节点回退
+        }
+    }
+}
+```
+</code-block>
 </code-group>
