--- a/docs/02.算法/04.LeetCode/0773.LC773-滑动谜题.md
+++ b/docs/02.算法/04.LeetCode/0773.LC773-滑动谜题.md
@@ -82,4 +82,61 @@ public:
 };
 ```
 </code-block>
+
+<code-block title="Java">
+```java
+class Solution {
+    private int[][] nears = {  // 每个下标对应的邻居下标
+        {1, 3},
+        {0, 2, 4},
+        {1, 5},
+        {0, 4},
+        {1, 3, 5},
+        {2, 4}
+    };
+    private Set<String> inq = new HashSet<>();  // 记录该状态是否入队
+    public int slidingPuzzle(int[][] board) {
+        StringBuilder start = new StringBuilder();  // 二维数组化为字符串形式
+        for(int i = 0; i < 6; ++i)  start.append(board[i/3][i%3]);
+        return bfs(start.toString(), "123450"); 
+    }
+    // 单向BFS
+    int bfs(String start, String target) {
+        int res = 0;
+        Queue<String> q = new LinkedList<>();
+        q.offer(start);
+        inq.add(start);
+        while(!q.isEmpty()) {
+            for(int i = 0, len = q.size(); i < len; ++i) {
+                if(q.peek().equals(target)) return res;
+                List<String> nexts = getNexts(q.poll());
+                for(String next : nexts) {
+                    q.offer(next);
+                    inq.add(next);
+                }
+            }
+            ++res;
+        }
+        return -1;
+    }
+    // 获取当前board移动一步能形成的boards（且未曾入队）
+    List<String> getNexts(String board) {
+        List<String> res = new ArrayList<>();
+        int zero = board.indexOf("0");  // 获取0的位置
+        for(int near : nears[zero]) {
+            String temp = moveZero(board, zero, near);
+            if(!inq.contains(temp)) res.add(temp);
+        }
+        return res;
+    }
+    // 移动0的位置
+    String moveZero(String board, int zero, int near) {
+        StringBuilder sb = new StringBuilder(board);
+        sb.setCharAt(zero, board.charAt(near));
+        sb.setCharAt(near, '0');
+        return sb.toString();
+    }
+}
+```
+</code-block>
 </code-group>
