--- a/docs/02.算法/04.LeetCode/0930.LC930-和相同的二元子数组.md
+++ b/docs/02.算法/04.LeetCode/0930.LC930-和相同的二元子数组.md
@@ -36,4 +36,23 @@ public:
 };
 ```
 </code-block>
+
+<code-block title="Java">
+```java
+class Solution {
+    public int numSubarraysWithSum(int[] nums, int goal) {
+        int res = 0, curSum = 0;
+        Map<Integer, Integer> map = new HashMap<Integer, Integer>();  // 相同前缀和可能有多个
+        map.put(0, 1);
+        for(int num : nums) {
+            curSum += num;
+            int target = curSum - goal;  // 需要寻找的前缀和目标
+            if(map.containsKey(target)) res += map.get(target);
+            map.put(curSum, map.getOrDefault(curSum, 0) + 1);
+        }
+        return res;
+    }
+}
+```
+</code-block>
 </code-group>
