--- a/docs/02.算法/04.LeetCode/0017.LC17-电话号码的字母组合.md
+++ b/docs/02.算法/04.LeetCode/0017.LC17-电话号码的字母组合.md
@@ -26,26 +26,56 @@ permalink: /pages/cf5b1c/
 class Solution {
 public:
     // 数字对应的字符串
-    vector<string> vs= {"", "", "abc", "def", "ghi", "jkl", "mno", "pqrs", "tuv", "wxyz"};
+    vector<string> list = {"", "", "abc", "def", "ghi", "jkl", "mno", "pqrs", "tuv", "wxyz"};
+    vector<string> res;
     vector<string> letterCombinations(string digits) { 
         if(digits.length() == 0) return {};
-        vector<string> res;
-        backtracking("", digits, 0, res);
+        backtracking("", digits, 0);
         return res;
     }
     /* 回溯算法 */
-    void backtracking(string path, string digits, int idx, vector<string>& res) {
+    void backtracking(string path, string digits, int idx) {
         if(idx == digits.size()) {
-            res.push_back(path);
+            res.push_back(path);  // 到达长度，添加组合
             return;
         }
-        for(int i = 0; i < vs[(int)(digits[idx] - '0')].size(); ++i) {
-            path.push_back(vs[(int)(digits[idx] - '0')][i]);  // 加入当前字符串可选字符
-            backtracking(path, digits, idx + 1, res);  // 下一个字符串
+        string str = list[digits[idx] - '0'];
+        for(int i = 0; i < str.size(); ++i) {
+            path.push_back(str[i]);  // 加入当前字符串可选字符
+            backtracking(path, digits, idx + 1);  // 下一个字符串
             path.pop_back();
         }
     }
 };
+```
+</code-block>
+
+<code-block title="Java">
+```java
+class Solution {
+    private List<String> list = new ArrayList<String>(  // 数字对应的字符串
+        Arrays.asList("", "", "abc", "def", "ghi", "jkl", "mno", "pqrs", "tuv", "wxyz")
+    );
+    private List<String> res = new ArrayList();
+    public List<String> letterCombinations(String digits) {
+        if(digits.length() == 0) return res;
+        backtracking(new StringBuffer(), digits, 0);
+        return res;
+    }
+    /* 回溯算法 */
+    private void backtracking(StringBuffer path, String digits, int idx) {
+        if(idx == digits.length()) {
+            res.add(path.toString());  // 到达长度，添加组合
+            return;
+        }
+        String str = list.get(digits.charAt(idx) - '0');
+        for(int i = 0; i < str.length(); ++i) {
+            path.append(str.charAt(i));  // 加入当前字符串可选字符
+            backtracking(path, digits, idx + 1);  // 下一个字符串
+            path.deleteCharAt(idx);
+        }
+    }
+}
 ```
 </code-block>
 </code-group>
