--- a/docs/02.算法/04.LeetCode/0102.LC102-二叉树的层序遍历.md
+++ b/docs/02.算法/04.LeetCode/0102.LC102-二叉树的层序遍历.md
@@ -57,4 +57,47 @@ public:
 };
 ```
 </code-block>
+
+<code-block title="Java">
+```java
+/**
+ * Definition for a binary tree node.
+ * public class TreeNode {
+ *     int val;
+ *     TreeNode left;
+ *     TreeNode right;
+ *     TreeNode() {}
+ *     TreeNode(int val) { this.val = val; }
+ *     TreeNode(int val, TreeNode left, TreeNode right) {
+ *         this.val = val;
+ *         this.left = left;
+ *         this.right = right;
+ *     }
+ * }
+ */
+class Solution {
+    public List<List<Integer>> levelOrder(TreeNode root) {
+        if(root == null) return new ArrayList<>();
+        return bfs(root);
+    }
+    // 利用队列实现二叉树的广度优先搜索
+    private List<List<Integer>> bfs(TreeNode root) {
+        List<List<Integer>> res = new ArrayList<>();
+        Queue<TreeNode> q = new LinkedList<TreeNode>();
+        q.offer(root);
+        while(!q.isEmpty()) {
+            List<Integer> temp = new ArrayList<Integer>();
+            for(int i = 0, len = q.size(); i < len; ++i)  {
+                TreeNode p = q.poll();
+                temp.add(p.val);
+                if(p.left != null) q.offer(p.left);
+                if(p.right != null) q.offer(p.right);
+            }
+            res.add(temp);
+        }
+        return res;
+    }
+}
+```
+</code-block>
 </code-group>
