--- a/docs/02.算法/04.LeetCode/0112.LC112-路径总和.md
+++ b/docs/02.算法/04.LeetCode/0112.LC112-路径总和.md
@@ -45,4 +45,33 @@ public:
 };
 ```
 </code-block>
+
+<code-block title="Java">
+```java
+/**
+ * Definition for a binary tree node.
+ * public class TreeNode {
+ *     int val;
+ *     TreeNode left;
+ *     TreeNode right;
+ *     TreeNode() {}
+ *     TreeNode(int val) { this.val = val; }
+ *     TreeNode(int val, TreeNode left, TreeNode right) {
+ *         this.val = val;
+ *         this.left = left;
+ *         this.right = right;
+ *     }
+ * }
+ */
+class Solution {
+    public boolean hasPathSum(TreeNode root, int targetSum) {
+        if(root == null) return false;
+        // 到达叶节点时判断是否符合目标和
+        if(root.left == null && root.right == null && root.val == targetSum) return true;
+        // 左右子树存在该路径即可（动态调整target值）
+        return hasPathSum(root.left, targetSum - root.val) || hasPathSum(root.right, targetSum - root.val);
+    }
+}
+```
+</code-block>
 </code-group>
