--- a/docs/02.算法/04.LeetCode/1208.LC1208-尽可能使字符串相等.md
+++ b/docs/02.算法/04.LeetCode/1208.LC1208-尽可能使字符串相等.md
@@ -38,4 +38,25 @@ public:
 };
 ```
 </code-block>
+
+<code-block title="Java">
+```java
+class Solution {
+    public int equalSubstring(String s, String t, int maxCost) {
+        int res = 0;
+        int left = 0, right = 0, winCost = 0;   //窗口左右指针、窗口开销
+        while(right < s.length()) {
+            winCost += Math.abs(s.charAt(right) - t.charAt(right));
+            while(winCost > maxCost) {     //超过预算，缩小窗口
+                winCost -= Math.abs(s.charAt(left) - t.charAt(left));
+                ++left;
+            }
+            res = Math.max(res, right - left + 1);
+            ++right;
+        }
+        return res;
+    }
+}
+```
+</code-block>
 </code-group>
