--- a/docs/02.算法/04.LeetCode/1833.LC1833-雪糕的最大数量.md
+++ b/docs/02.算法/04.LeetCode/1833.LC1833-雪糕的最大数量.md
@@ -32,4 +32,20 @@ public:
 };
 ```
 </code-block>
+
+<code-block title="Java">
+```java
+class Solution {
+class Solution {
+    public int maxIceCream(int[] costs, int coins) {
+        Arrays.sort(costs);
+        for(int i = 0; i < costs.length; ++i) {
+            if(coins < costs[i]) return i;
+            coins -= costs[i];
+        }
+        return costs.length;
+    }
+}
+```
+</code-block>
 </code-group>
