--- a/docs/03.杂记/05.折腾笔记/03.Linux终端优化.md
+++ b/docs/03.杂记/05.折腾笔记/03.Linux终端优化.md
@@ -15,21 +15,32 @@ $ echo $SHELL
 ### 安装 zsh
 - CentOS
 ```sh
-$ yum install -y zsh
+$ sudo yum install -y zsh
+```
+
+- Ubuntu
+```sh
+$ sudo apt install -y zsh
 ```
 
 ### 切换 shell
 ```sh
 $ chsh -s /bin/zsh
-Changing shell for root.
-Shell changed.
 ```
+重启生效
 
 ## oh-my-zsh
 ### 安装 git（若已安装可跳过）
+- CentOS
 ```sh
-$ yum install -y git
+$ sudo yum install -y git
 ```
+
+- Ubuntu
+```sh
+$ sudo apt install -y git
+```
+
 git 相关配置请参考[Git常用命令](/pages/49b5fe/)
 
 ### 安装 oh-my-zsh
@@ -52,7 +63,7 @@ $ source ~/.zshrc
 ### 安装插件
 ```sh
 $ cd ~/.oh-my-zsh/custom/plugins
-$ cd git clone <plugin-repo>
+$ git clone <plugin-repo>
 
 $ vim ~/.zshrc
 # 在配置中添加插件
